<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".MainActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="79dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/deca1"
                tools:srcCompat="@drawable/deca1" />

            <Button
                android:id="@+id/button1"
                android:layout_width="118dp"
                android:layout_height="49dp"
                android:layout_marginStart="35dp"
                android:backgroundTint="@color/ihsblue"
                android:text="@string/deca"
                android:textSize="20sp" />

            <ImageButton
                android:id="@+id/imageButton2"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginStart="230dp"
                android:layout_marginTop="-200dp"
                app:srcCompat="@drawable/ic_launcher" />

            <Button
                android:id="@+id/button2"
                android:layout_width="118dp"
                android:layout_height="49dp"
                android:layout_marginStart="245dp"
                android:backgroundTint="@color/ihsblue"
                android:text="@string/debate"
                android:textSize="20sp" />

            <ImageButton
                android:id="@+id/imageButton3"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="2dp"
                android:src="@drawable/indopak"
                tools:srcCompat="@drawable/indopak" />

            <Button
                android:id="@+id/button3"
                android:layout_width="118dp"
                android:layout_height="49dp"
                android:layout_marginStart="35dp"
                android:backgroundTint="@color/ihsblue"
                android:text="@string/indopak"
                android:textSize="18sp" />

            <ImageButton
                android:id="@+id/imageButton4"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginStart="230dp"
                android:layout_marginTop="-200dp"
                android:src="@drawable/fbla"
                tools:srcCompat="@drawable/fbla" />

            <Button
                android:id="@+id/button4"
                android:layout_width="118dp"
                android:layout_height="49dp"
                android:layout_marginStart="245dp"
                android:backgroundTint="@color/ihsblue"
                android:text="@string/fbla"
                android:textSize="20sp" />

            <ImageButton
                android:id="@+id/imageButton5"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="2dp"
                android:src="@drawable/math"
                tools:srcCompat="@drawable/math" />

            <Button
                android:id="@+id/button5"
                android:layout_width="118dp"
                android:layout_height="49dp"
                android:layout_marginStart="35dp"
                android:backgroundTint="@color/ihsblue"
                android:text="@string/math"
                android:textSize="20sp" />

            <ImageButton
                android:id="@+id/imageButton6"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginStart="230dp"
                android:layout_marginTop="-200dp"
                android:src="@drawable/chess"
                tools:srcCompat="@drawable/chess" />

            <Button
                android:id="@+id/button6"
                android:layout_width="118dp"
                android:layout_height="49dp"
                android:layout_marginStart="245dp"
                android:backgroundTint="@color/ihsblue"
                android:text="@string/chess"
                android:textSize="20sp" />

            <ImageButton
                android:id="@+id/imageButton7"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/mun1"
                tools:srcCompat="@drawable/mun1" />

            <Button
                android:id="@+id/button7"
                android:layout_width="118dp"
                android:layout_height="49dp"
                android:layout_marginStart="35dp"
                android:backgroundTint="@color/ihsblue"
                android:text="@string/model_un"
                android:textSize="15sp" />


            <ImageButton
                android:id="@+id/imageButton8"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginStart="230dp"
                android:layout_marginTop="-200dp"
                android:src="@drawable/compsci"
                tools:srcCompat="@drawable/compsci" />

            <Button
                android:id="@+id/button8"
                android:layout_width="118dp"
                android:layout_height="49dp"
                android:layout_marginStart="245dp"
                android:backgroundTint="@color/ihsblue"
                android:text="@string/comp_sci"
                android:textSize="16sp" />


        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>